--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@
 </head>
 
 <body>
+    <!-- DIV container -->
+    <div>
+        <header>
+            <h1>
 
+            </h1>
+        </header>
+
+
+        <main>
+            <section>
+                <p>
+
+                </p>
+            </section>
+
+            <section>
+                <div>
+
+                </div>
+            </section>
+
+            <section>
+                <div>
+
+                </div>
+            </section>
+        </main>
+
+    </div>
 
 </body>
 
