--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Floating Cards</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,32 +13,79 @@
 
 <body>
     <!-- DIV container -->
-    <div>
+    <div class="container">
         <header>
-            <h1>
-
+            <h1 class="pink-color">
+                Meet Our Team
             </h1>
         </header>
 
 
         <main>
             <section>
-                <p>
-
+                <p class="intro">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, repudiandae ullam, magnam facilis
+                    accusantium sit inventore fugit dolorem deserunt asperiores nihil rerum incidunt, vitae ex debitis.
+                    Molestias cupiditate nam ipsa!
                 </p>
             </section>
 
+            <section class="team">
+                <div class="columns clearfix">
+                    <div>
+                        <img src="img/male1.png" alt="">
+                        <h3>Marco Bianchi</h3>
+                        <p>Designer <span>marcobianchi@team.com</span></p>
+                    </div>
+
+                </div>
+                <div class="columns clearfix">
+                    <div>
+                        <img src="img/female1.png" alt="">
+                        <h3>Laura Rossi</h3>
+                        <p>Front-end Developer <span>laurarossi@team.com</span></p>
+                    </div>
+
+                </div>
+                <div class="columns clearfix">
+                    <div>
+                        <img src="img/male2.png" alt="">
+                        <h3>giorgo Verdi</h3>
+                        <p>Back-End Developer <span>giorgioverdi@team.com</span></p>
+                    </div>
+
+                </div>
+            </section>
             <section>
-                <div>
+                <div class="columns clearfix">
+                    <div>
+                        <img src="img/female2.png" alt="">
+                        <h3>Marta Ipsum</h3>
+                        <p>SEO Specialist <span>martaipsum@team.com</span></p>
+                    </div>
+
+                </div>
+                <div class="columns clearfix">
+                    <div>
+                        <img src="img/male3.png" alt="">
+                        <h3>Roberto Lorem</h3>
+                        <p>Project Manager <span>robertolorem@team.com</span></p>
+                    </div>
+
+                </div>
+                <div class="columns clearfix">
+                    <div>
+                        <img src="img/female3.png" alt="">
+                        <h3>Daniela Amet</h3>
+                        <p>Analist <br> <span>danielaamet@team.com</span></p>
+                    </div>
+
+
+
 
                 </div>
             </section>
 
-            <section>
-                <div>
-
-                </div>
-            </section>
         </main>
 
     </div>
